--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@date-io/date-fns": "1.x",
     "@itera-storybook/button": "^0.1.1",
+    "@itera-storybook/button-back": "^0.1.8",
+    "@itera-storybook/button-default": "^0.1.8",
+    "@itera-storybook/form": "^0.1.8",
+    "@itera-storybook/input": "^0.1.8",
+    "@itera-storybook/range": "^0.1.8",
+    "@itera-storybook/wizard-form": "^0.1.8",
+    "@material-ui/core": "^4.9.3",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,9 +21,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "@types/styled-components": "^4.4.3",
+    "apollo-boost": "^0.4.7",
+    "bootstrap": "^4.4.1",
+    "date-fns": "^2.9.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "react": "16.8",
+    "react-apollo": "^3.1.3",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "16.8",
+    "react-is": "16.8",
     "react-scripts": "3.4.0",
+    "styled-components": "5.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
